--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: ' Calibri';
     color: aquamarine;
 }
 .container{
