--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: ' Calibri';
+    font-family: Arial, Helvetica, sans-serif;
     color: aquamarine;
 }
 .container{
