--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
-    text-align: center;
+    text-align: right;
     font-family: Arial, Helvetica, sans-serif;
-    color: aquamarine;
+    color: rgb(37, 39, 38);
 }
 .container{
     margin: 0 auto;
