--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: aquamarine;
+    color: blue;
 }
 .container{
     margin: 0 auto;
