--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,3 +31,12 @@ body{
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.footer{
+    text-align: center;
+    color: #ffff;
+    margin-top: 10px;
+    padding-top:5px ;
+    padding-bottom: 5px;
+    background-color: rgb(91, 91, 190);
+}
